--- a/client/src/app/private/components/room-list-item/room-list-item.component.html
+++ b/client/src/app/private/components/room-list-item/room-list-item.component.html
@@ -7,22 +7,33 @@
             </div>
             <div class="col-6 created-by">
                 <span class="font-weight-bold">Created By: </span>
-                <span>{{room?.creator?.username}}</span>
+                <span>{{creator.username}}</span>
             </div>
             <div *ngIf="room?.description" class="col-7 description">
                 <span class="font-weight-bold">Description: </span>
                 <span>{{room?.description}}</span>
             </div>
             <div class="text-right" [ngClass]="{'col-5' : room?.description, 'col-12' : !room?.description}">
-                <button mat-stroked-button type="button" (click)="buttonClicked($event)">
+                <button mat-stroked-button [color]="isUserAddedToRoom ? 'primary': 'accent'" type="button"
+                    (click)="buttonClicked()">
                     <div class="row mx-0">
-                        <div>{{buttonText}}</div>
-                        <div class="pb-1">
-                            <app-icon icon="group_add" size="20"></app-icon>
-                        </div>
+                        <ng-container *ngIf="isUserAddedToRoom; else joinButtonContent">
+                            <div>Open</div>
+                            <div class="pl-1 pb-1">
+                                <app-icon icon="supervised_user_circle" size="20"></app-icon>
+                            </div>
+                        </ng-container>
                     </div>
                 </button>
             </div>
         </div>
     </mat-card-content>
 </mat-card>
+
+<ng-template #joinButtonContent>
+    <div>Join</div>
+    <div class="pl-1 pb-1">
+        <app-icon icon="group_add" size="20"></app-icon>
+    </div>
+
+</ng-template>
