--- a/client/src/app/private/pages/my-rooms/my-rooms.component.html
+++ b/client/src/app/private/pages/my-rooms/my-rooms.component.html
@@ -17,12 +17,16 @@
     <div id="PublicRooms" class="flex-grow-1 pt-3">
         <mat-card>
             <mat-card-content>
-                <ng-container *ngIf="paginatedRooms?.items.length > 0 else noRooms">
-                    <div class="row">
+                <ng-container *ngIf="paginatedRooms?.items?.length > 0 else noRooms">
+                    <div class="row" *ngIf="paginatedRooms?.items?.length > 0; else noRooms">
                         <div *ngFor="let room of paginatedRooms?.items" class="col-12 py-2">
-                            <app-room-list-item [room]="room" buttonText="Join" (onButtonClick)="joinRoom($event)">
+                            <app-room-list-item [room]="room">
                             </app-room-list-item>
                         </div>
+                        <mat-paginator [length]="paginatedRooms?.meta?.totalItems"
+                            [pageIndex]="paginatedRooms?.meta?.currentPage"
+                            [pageSize]="paginatedRooms?.meta?.itemsPerPage" (page)="onPaginateRooms($event)"
+                            [pageSizeOptions]="[10,25,50]"></mat-paginator>
                     </div>
                 </ng-container>
             </mat-card-content>
