room and messages updated

--- a/client/src/app/private/components/chat-message/chat-message.component.html
+++ b/client/src/app/private/components/chat-message/chat-message.component.html
@@ -1,9 +1,11 @@
-<span style="display: flex;" [ngClass]="{ownContainer: message.user.id === user.id}">
-    <p [ngClass]="{ownMessage: message.user.id === user.id}">
-        <em>
-            {{message.user.username}}
-        </em>
-        <br>
-        {{message.text}}
-    </p>
-</span>
+<div class="message-container"
+    [ngClass]="{'my-message': sender.id === user.id && messageType != MessageTypeEnum.Notification, 'notification': messageType === MessageTypeEnum.Notification}">
+    <div class="sender" *ngIf="messageType != MessageTypeEnum.Notification && sender.id != user.id">
+          {{sender.username}}
+    </div>
+    <div class="message">
+        <span>
+            {{text}}
+        </span>
+    </div>
+</div>
