--- a/client/src/app/private/components/page-header/page-header.component.html
+++ b/client/src/app/private/components/page-header/page-header.component.html
@@ -1,38 +1,27 @@
-<div class="vh-100 d-flex flex-column">
-    <div id="Header" class="w-100 flex-shrink-1 h-60px">
-        <ng-container *ngTemplateOutlet="headerTemplate"></ng-container>
-    </div>
-    <div class="flex-grow-1 overflow-y-scroll">
-        <ng-content></ng-content>
-    </div>
+<div class="h-100 d-flex align-items-center">
+    <img id="Logo" src="assets/images/QuestAppLogo.png" class="h-100" />
+    <ng-container *ngTemplateOutlet="columnBreak"></ng-container>
+    <ng-container *ngTemplateOutlet="buttonTemplate; context:{
+            icon: 'videogame_asset', text: 'Public Games', route: '/private/public-rooms'
+        }">
+    </ng-container>
+    <ng-container *ngTemplateOutlet="columnBreak"></ng-container>
+    <ng-container *ngTemplateOutlet="buttonTemplate; context:{
+            icon: 'question_answer', text: 'My Rooms', route: '/private/my-rooms'
+        }">
+    </ng-container>
+    <ng-container *ngTemplateOutlet="columnBreak"></ng-container>
+    <ng-container *ngTemplateOutlet="buttonTemplate; context:{
+            icon: 'person_outline', text: 'Profile', route: '/private/profile'
+        }">
+    </ng-container>
 </div>
-
-<ng-template #headerTemplate>
-    <div class="h-100 d-flex align-items-center">
-        <img id="Logo" src="assets/images/QuestAppLogo.png" class="h-100" />
-        <ng-container *ngTemplateOutlet="columnBreak"></ng-container>
-        <ng-container *ngTemplateOutlet="buttonTemplate; context:{
-            icon: 'videogame_asset', text: 'Public Games', route: './private/public-rooms'
-        }">
-        </ng-container>
-        <ng-container *ngTemplateOutlet="columnBreak"></ng-container>
-        <ng-container *ngTemplateOutlet="buttonTemplate; context:{
-            icon: 'question_answer', text: 'My Rooms', route: './private/my-rooms'
-        }">
-        </ng-container>
-        <ng-container *ngTemplateOutlet="columnBreak"></ng-container>
-        <ng-container *ngTemplateOutlet="buttonTemplate; context:{
-            icon: 'person_outline', text: 'Profile', route: './private/profile'
-        }">
-        </ng-container>
-    </div>
-</ng-template>
 
 <ng-template #buttonTemplate let-icon="icon" let-text="text" let-route="route">
     <div class="h-100">
         <button mat-button type="button" class="h-100 max-w-100" (click)="goToRoute(route)">
             <div class="d-flex">
-                <div>{{text}}</div>
+                <div [ngClass]="{'text-underline': router.url == route}">{{text}}</div>
                 <div class="pl-2 pb-1">
                     <app-icon [icon]="icon"></app-icon>
                 </div>
