--- a/client/src/app/private/components/room-list-item/room-list-item.component.html
+++ b/client/src/app/private/components/room-list-item/room-list-item.component.html
@@ -1,15 +1,15 @@
 <mat-card class="w-100">
     <mat-card-content>
-        <div class="row room-list-item">
+        <div class="row">
             <div class="col-6 title">
                 <span class="font-weight-bold">Title: </span>
                 <span>{{room?.title}}</span>
             </div>
-            <div class="col-6 created-by">
+            <div class="col-6">
                 <span class="font-weight-bold">Created By: </span>
-                <span>{{creator.username}}</span>
+                <span>{{creator?.username}}</span>
             </div>
-            <div *ngIf="room?.description" class="col-7 description">
+            <div *ngIf="room?.description" class="col-7">
                 <span class="font-weight-bold">Description: </span>
                 <span>{{room?.description}}</span>
             </div>
@@ -20,7 +20,7 @@
                         <ng-container *ngIf="isUserAddedToRoom; else joinButtonContent">
                             <div>Open</div>
                             <div class="pl-1 pb-1">
-                                <app-icon icon="supervised_user_circle" size="20"></app-icon>
+                                <app-icon icon="meeting_room" size="20"></app-icon>
                             </div>
                         </ng-container>
                     </div>
