--- a/client/src/app/private/pages/room/room.component.html
+++ b/client/src/app/private/pages/room/room.component.html
@@ -1,1 +1,53 @@
-<p>room works!</p>
+<div *ngIf="room; else noroomSelected" class="d-flex flex-column h-100">
+    <!-- header -->
+    <div class="flex-shrink-1 d-flex flex-column">
+        <div class="d-flex align-items-center">
+            <h2>{{room.title}}</h2>
+        </div>
+        <div *ngIf="room.description" class="w-100">
+            <h3 class="description">{{room.description}}</h3>
+        </div>
+        <div class="w-100">
+            <span *ngFor="let addedUser of room.users; let last = last;">
+                {{addedUser.user.username}}{{last? '':', '}}
+            </span>
+        </div>
+    </div>
+
+    <mat-card class="pb-1 max-h-100 min-h-300px">
+        <mat-card-content class="d-flex flex-column h-100">
+            <div #MessagesScroller class="d-flex flex-column overflow-y-scroll min-h-200px">
+                <app-chat-message *ngFor="let message of paginatedMessages?.items" [message]="message">
+                </app-chat-message>
+            </div>
+
+            <!-- add message -->
+            <div class="flex-shrink-1 ">
+                <div class="d-flex align-items-center">
+                    <mat-form-field hideRequiredMarker class="flex-grow-1 pb-0">
+                        <input matInput type="text" [formControl]="chatMessage" placeholder="New Message..."
+                            (keyup.enter)="sendMessage()">
+                    </mat-form-field>
+                    <div class="flex-shrink-1 px-1">
+                        <button mat-button [disabled]="!chatMessage.value" (click)="sendMessage()"
+                            (keyup.enter)="sendMessage()">
+                            <div class="d-flex">
+                                <div class="d-sm-block d-none">Send</div>
+                                <div class="pl-sm-1 pb-sm-1 m-sm-0 m-auto">
+                                    <app-icon icon="send"></app-icon>
+                                </div>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </mat-card-content>
+    </mat-card>
+
+</div>
+
+<ng-template #noroomSelected>
+    <div class="text-center">
+        <mat-error>No room Selected</mat-error>
+    </div>
+</ng-template>
