--- a/client/src/app/styles/styles.scss
+++ b/client/src/app/styles/styles.scss
@@ -11,6 +11,7 @@ body {
 }
 
 .content-container {
+    height: 100%;
     max-width: 550px;
     padding: 15px;
     margin-left: auto;
@@ -28,6 +29,22 @@ body {
 }
 
 // override form field padding
-mat-form-field.mat-form-field-invalid {
-    padding-bottom: 15px !important;
+mat-form-field {
+    &.mat-form-field-invalid {
+        padding-bottom: 15px;
+    }
+
+    .mat-form-field-infix {
+        width: 100%;
+    }
+}
+
+
+.text-underline {
+    text-decoration: underline;
+}
+
+.line-break {
+    width: 100%;
+    border-width: 5px;
 }
