rooms pages updated

--- a/client/src/app/private/pages/process-login/process-login.component.html
+++ b/client/src/app/private/pages/process-login/process-login.component.html
@@ -1,1 +1,5 @@
-<p>process-login works!</p>
+<div class="vh-100 text-center d-flex flex-column align-items-center justify-content-center">
+    <h5>Processing Login...</h5>
+    <mat-progress-spinner mode="indeterminate">
+    </mat-progress-spinner>
+</div>
