--- a/client/src/app/private/pages/my-rooms/my-rooms.component.html
+++ b/client/src/app/private/pages/my-rooms/my-rooms.component.html
@@ -1,12 +1,12 @@
-<div class="d-flex flex-column">
-    <div class="row flex-shrink-1">
-        <div class="col-6 align-self-end">
+<div class="d-flex flex-column pb-2">
+    <div class="d-flex flex-shrink-1">
+        <div class="flex-grow-1 align-self-end">
             <h5 class="m-0">My Rooms</h5>
         </div>
-        <div id="CreateNewRoom" class="col-6 text-right">
+        <div id="CreateNewRoom" class="d-flex text-right">
             <button mat-stroked-button type="button" (click)="goToCreateRooms()">
-                <div class="row mx-0">
-                    <div>Create Room</div>
+                <div class="d-flex">
+                    <div>New Room</div>
                     <div class="pb-1">
                         <app-icon icon="add"></app-icon>
                     </div>
@@ -26,7 +26,7 @@
                         <mat-paginator [length]="paginatedRooms?.meta?.totalItems"
                             [pageIndex]="paginatedRooms?.meta?.currentPage"
                             [pageSize]="paginatedRooms?.meta?.itemsPerPage" (page)="onPaginateRooms($event)"
-                            [pageSizeOptions]="[10,25,50]"></mat-paginator>
+                            [pageSizeOptions]="[5,10,25,50]"></mat-paginator>
                     </div>
                 </ng-container>
             </mat-card-content>
