--- a/client/src/app/public/pages/login/login.component.html
+++ b/client/src/app/public/pages/login/login.component.html
@@ -1,12 +1,15 @@
-<div class="container">
+<div class="container justify-content-center">
     <mat-card class="mt-3">
         <mat-card-content>
             <div class="row">
-                <mat-card-title class="col-12">
+                <div class="col-12 mb-4 text-center h-100px">
+                    <img id="Logo" src="assets/images/QuestAppLogo.png" class="h-100" />
+                </div>
+                <mat-card-title class="col-12 text-center">
                     Login
                 </mat-card-title>
 
-                <form class="col-12" [formGroup]="form" (ngSubmit)="login()">
+                <form class="col-12 mb-4" [formGroup]="form" (ngSubmit)="login()">
                     <div class="row">
                         <mat-form-field color="accent" class="col-12">
                             <input matInput id="Email" type="email" placeholder="Email" formControlName="email">
