leave room added

--- a/client/src/app/private/pages/my-rooms/my-rooms.component.html
+++ b/client/src/app/private/pages/my-rooms/my-rooms.component.html
@@ -20,8 +20,7 @@
                 <ng-container *ngIf="paginatedRooms?.items?.length > 0 else noRooms">
                     <div class="row" *ngIf="paginatedRooms?.items?.length > 0; else noRooms">
                         <div *ngFor="let room of paginatedRooms?.items" class="col-12 py-2">
-                            <app-room-list-item [room]="room">
-                            </app-room-list-item>
+                            <app-room-list-item [room]="room"></app-room-list-item>
                         </div>
                         <mat-paginator [length]="paginatedRooms?.meta?.totalItems"
                             [pageIndex]="paginatedRooms?.meta?.currentPage"
