--- a/client/src/app/private/components/room-list-item/room-list-item.component.html
+++ b/client/src/app/private/components/room-list-item/room-list-item.component.html
@@ -1,7 +1,7 @@
 <mat-card class="w-100">
     <mat-card-content>
         <div class="row">
-            <div class="col-6 title">
+            <div class="col-6">
                 <span class="font-weight-bold">Title: </span>
                 <span>{{room?.title}}</span>
             </div>
@@ -9,11 +9,11 @@
                 <span class="font-weight-bold">Created By: </span>
                 <span>{{creator?.username}}</span>
             </div>
-            <div *ngIf="room?.description" class="col-7">
+            <div *ngIf="room?.description" class="col-6">
                 <span class="font-weight-bold">Description: </span>
                 <span>{{room?.description}}</span>
             </div>
-            <div class="text-right" [ngClass]="{'col-5' : room?.description, 'col-12' : !room?.description}">
+            <div class="text-right" [ngClass]="{'col-6' : room?.description, 'col-12' : !room?.description}">
                 <button mat-stroked-button [color]="isUserAddedToRoom ? 'primary': 'accent'" type="button"
                     (click)="buttonClicked()">
                     <div class="row mx-0">
